// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> components/base/serviceOverview.tsx --- Snapshot +++ Should match snapshot 1`] = `
<div
  className="Connect-ServicesOverviewComponent--mar_top_100-1 Connect-ServicesOverviewComponent--mar_bot_50-3"
>
  <div
    className="MuiGrid-container-10"
  >
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-12-64 MuiGrid-grid-md-8-74 MuiGrid-grid-lg-8-88 MuiGrid-grid-xl-8-102"
    >
      <h1
        className="MuiTypography-root-107 MuiTypography-h1-119 MuiTypography-gutterBottom-134"
      >
        dashboard.main_header
      </h1>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-12-64 MuiGrid-grid-md-4-70 MuiGrid-grid-lg-4-84 MuiGrid-grid-xl-4-98 Connect-ServicesOverviewComponent--textToRight-6"
    >
      <div>
        <button
          className="MuiButtonBase-root-173 MuiButton-root-147 MuiButton-contained-158 MuiButton-raised-161 AltinnIconButton-dottedBtn-145"
          disabled={false}
          id="ceateService"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-148"
          >
            <i
              className="ai ai-circle-plus AltinnIconButton-dottedBtnIcon-146"
            />
            dashboard.new_service
          </span>
          <span
            className="MuiTouchRipple-root-231"
          />
        </button>
      </div>
    </div>
  </div>
  <p
    className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-gutterBottom-134 Connect-ServicesOverviewComponent--mar_top_50-2 Connect-ServicesOverviewComponent--textSyle-9"
  >
    dashboard.main_subheader
  </p>
  <div
    className="MuiGrid-container-10 Connect-ServicesOverviewComponent--mar_top_50-2"
  >
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-10-62 MuiGrid-grid-md-10-76 MuiGrid-grid-lg-12-92 MuiGrid-grid-xl-12-106"
    >
      <div
        className="MuiFormControl-root-188 AltinnSearchInput-searchBox-185 MuiFormControl-fullWidth-191"
      >
        <div
          className="MuiFormControl-root-188"
        >
          <div
            className="MuiInputBase-root-205 MuiInput-root-192 AltinnSearchInput-searchBoxInput-186 MuiInputBase-formControl-206 MuiInput-formControl-193 MuiInputBase-adornedStart-209"
            onClick={[Function]}
          >
            <div
              className="MuiInputAdornment-root-222 AltinnSearchInput-searchBoxIcon-187 MuiInputAdornment-positionEnd-225"
            >
              <i
                className="ai ai-search"
              />
            </div>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-215 MuiInput-input-200 MuiInputBase-inputAdornedStart-220"
              disabled={false}
              id="service-search"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="dashboard.search_service"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-md-12-78 MuiGrid-grid-lg-10-90 MuiGrid-grid-xl-10-104"
    >
      <div
        className="MuiChip-root-241 MuiChip-colorPrimary-242 MuiChip-clickable-244 MuiChip-clickableColorPrimary-245 MuiChip-outlined-250 MuiChip-outlinedPrimary-251 Connect-ServicesOverviewComponent--mar_right_20-4 Connect-ServicesOverviewComponent--mar_top_20-5 AltinnFilterChip-chip-238"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label-260"
        >
          Mons Monsen
        </span>
      </div>
      <div
        className="MuiChip-root-241 MuiChip-colorPrimary-242 MuiChip-clickable-244 MuiChip-clickableColorPrimary-245 MuiChip-outlined-250 MuiChip-outlinedPrimary-251 Connect-ServicesOverviewComponent--mar_right_20-4 Connect-ServicesOverviewComponent--mar_top_20-5 AltinnFilterChip-chip-238 AltinnFilterChip-chipActive-239"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label-260"
        >
          This is the full name of this org
        </span>
      </div>
    </div>
  </div>
  <div
    className="Connect-ServicesOverviewComponent--mar_top_50-2"
  >
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-noWrap-133 MuiTypography-gutterBottom-134 CategoryComponent-displayInlineBlock-227 CategoryComponent-width100-228 CategoryComponent-fontSize_16-230"
      >
        dashboard.category_service_write
      </p>
    </div>
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-alignCenter-130 CategoryComponent-width100-228 CategoryComponent-mar_top_100-226 CategoryComponent-fontSize_24-229"
      >
        dashboard.no_category_service_write
      </p>
    </div>
  </div>
  <div
    className="Connect-ServicesOverviewComponent--mar_top_100-1"
  >
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-noWrap-133 MuiTypography-gutterBottom-134 CategoryComponent-displayInlineBlock-227 CategoryComponent-width100-228 CategoryComponent-fontSize_16-230"
      >
        dashboard.category_service_read
      </p>
    </div>
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-alignCenter-130 CategoryComponent-width100-228 CategoryComponent-mar_top_100-226 CategoryComponent-fontSize_24-229"
      >
        dashboard.no_category_service_read
      </p>
    </div>
  </div>
</div>
`;

exports[`>>> components/base/serviceOverview.tsx --- Snapshot +++ Should match snapshot when empty 1`] = `
<div
  className="Connect-ServicesOverviewComponent--mar_top_100-1 Connect-ServicesOverviewComponent--mar_bot_50-3"
>
  <div
    className="MuiGrid-container-10"
  >
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-12-64 MuiGrid-grid-md-8-74 MuiGrid-grid-lg-8-88 MuiGrid-grid-xl-8-102"
    >
      <h1
        className="MuiTypography-root-107 MuiTypography-h1-119 MuiTypography-gutterBottom-134"
      >
        dashboard.main_header
      </h1>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-12-64 MuiGrid-grid-md-4-70 MuiGrid-grid-lg-4-84 MuiGrid-grid-xl-4-98 Connect-ServicesOverviewComponent--textToRight-6"
    >
      <div>
        <button
          className="MuiButtonBase-root-173 MuiButton-root-147 MuiButton-contained-158 MuiButton-raised-161 AltinnIconButton-dottedBtn-145"
          disabled={false}
          id="ceateService"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-148"
          >
            <i
              className="ai ai-circle-plus AltinnIconButton-dottedBtnIcon-146"
            />
            dashboard.new_service
          </span>
          <span
            className="MuiTouchRipple-root-231"
          />
        </button>
      </div>
    </div>
  </div>
  <p
    className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-gutterBottom-134 Connect-ServicesOverviewComponent--mar_top_50-2 Connect-ServicesOverviewComponent--textSyle-9"
  >
    dashboard.main_subheader
  </p>
  <div
    className="MuiGrid-container-10 Connect-ServicesOverviewComponent--mar_top_50-2"
  >
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-10-62 MuiGrid-grid-md-10-76 MuiGrid-grid-lg-12-92 MuiGrid-grid-xl-12-106"
    >
      <div
        className="MuiFormControl-root-188 AltinnSearchInput-searchBox-185 MuiFormControl-fullWidth-191"
      >
        <div
          className="MuiFormControl-root-188"
        >
          <div
            className="MuiInputBase-root-205 MuiInput-root-192 AltinnSearchInput-searchBoxInput-186 MuiInputBase-formControl-206 MuiInput-formControl-193 MuiInputBase-adornedStart-209"
            onClick={[Function]}
          >
            <div
              className="MuiInputAdornment-root-222 AltinnSearchInput-searchBoxIcon-187 MuiInputAdornment-positionEnd-225"
            >
              <i
                className="ai ai-search"
              />
            </div>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-215 MuiInput-input-200 MuiInputBase-inputAdornedStart-220"
              disabled={false}
              id="service-search"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="dashboard.search_service"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-md-12-78 MuiGrid-grid-lg-10-90 MuiGrid-grid-xl-10-104"
    >
      <div
        className="MuiChip-root-241 MuiChip-colorPrimary-242 MuiChip-clickable-244 MuiChip-clickableColorPrimary-245 MuiChip-outlined-250 MuiChip-outlinedPrimary-251 Connect-ServicesOverviewComponent--mar_right_20-4 Connect-ServicesOverviewComponent--mar_top_20-5 AltinnFilterChip-chip-238"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label-260"
        >
          Mons Monsen
        </span>
      </div>
    </div>
  </div>
  <div
    className="Connect-ServicesOverviewComponent--mar_top_50-2"
  >
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-noWrap-133 MuiTypography-gutterBottom-134 CategoryComponent-displayInlineBlock-227 CategoryComponent-width100-228 CategoryComponent-fontSize_16-230"
      >
        dashboard.category_service_write
      </p>
    </div>
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-alignCenter-130 CategoryComponent-width100-228 CategoryComponent-mar_top_100-226 CategoryComponent-fontSize_24-229"
      >
        dashboard.no_category_service_write
      </p>
    </div>
  </div>
  <div
    className="Connect-ServicesOverviewComponent--mar_top_100-1"
  >
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-noWrap-133 MuiTypography-gutterBottom-134 CategoryComponent-displayInlineBlock-227 CategoryComponent-width100-228 CategoryComponent-fontSize_16-230"
      >
        dashboard.category_service_read
      </p>
    </div>
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-alignCenter-130 CategoryComponent-width100-228 CategoryComponent-mar_top_100-226 CategoryComponent-fontSize_24-229"
      >
        dashboard.no_category_service_read
      </p>
    </div>
  </div>
</div>
`;
